# internet-shop

./: .env.sample  .gitignore  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
blog/templates/blog/includes/: inc_menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: category_fixture.json  product_fixture.json
catalog/management/commands/: add_exclude_user.py  add_testing_product.py  add_user.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_product_publications_flag.py  0004_alter_product_options.py  0005_alter_product_options.py  0006_alter_product_options.py  0007_alter_product_options.py  0008_alter_product_options.py  0009_product_owner.py
catalog/templates/catalog/: base.html  category_product_list.html  contact_form.html  contact_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templates/main/: add_product.html  base.html  contact.html  description.html  home.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_avatar.py
users/templates/users/: login.html  register.html
