[tool.poetry]
name = "internet-shop"
version = "0.1.0"
description = "Project for internet-show with working in django"
authors = ["Dmitriy Nadelyaev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
